# srt-editor

./: CMakeLists.txt  LICENSE  README.md  example.srt
include/: ExportValidator.h  TextToSpeech.h  Translator.h  main.h
src/: CMakeLists.txt  ExportValidator.cpp  TextToSpeech.cpp  Translator.cpp  main.cpp
ui/: CMakeLists.txt  about.ui  app_settings.cpp  app_settings.h  app_settings.ui  configure.h  languages.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  srt_editor_resources.qrc  subtitle_config.cpp  subtitle_config.h  subtitle_config.ui  subtitle_item.cpp  subtitle_item.h  subtitle_item.ui
